# ThetaSwap-core

./: .gitignore  .gitmodules  ALGEBRA_INTEGRATION.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  MVP-1-MONTH-PLAN.md  Makefile  PITCH.md  README.md  clippy.toml  conftest.py  executive-summary-uniswap-ambassador.md  foundry.toml  guia-preparacion-entrevista-embajador-uniswap.plan.md  justfile  market-validation-plan.md  notes.md  pyproject.toml  remappings.txt  rust-toolchain.toml  rustfmt.toml  taplo.toml  uniswap-ambassador-interview-prep.plan.md
crates/amm-quoter/: Cargo.toml  README.md
crates/amm-quoter/src/: lib.rs
crates/angstrom-net/: Cargo.toml  README.md
crates/angstrom-net/src/: builder.rs  cache.rs  eth_network_builder.rs  lib.rs  manager.rs  network.rs  pool_manager.rs  state.rs  swarm.rs
crates/angstrom-net/src/errors/: mod.rs  strom.rs
crates/angstrom-net/src/peers/: manager.rs  mod.rs  reputation.rs
crates/angstrom-net/src/session/: config.rs  connection_handler.rs  handle.rs  mod.rs  protocol_handler.rs
crates/angstrom-net/src/types/: broadcast.rs  handshake.rs  message.rs  mod.rs  status.rs  version.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: leader_selection.rs  lib.rs  manager.rs
crates/consensus/src/rounds/: bid_aggregation.rs  finalization.rs  mod.rs  pre_proposal.rs  pre_proposal_aggregation.rs  preproposal_wait_trigger.rs  proposal.rs
crates/eth/: Cargo.toml
crates/eth/src/: handle.rs  lib.rs  manager.rs  telemetry.rs
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: delta_tps.rs
crates/matching-engine/src/: lib.rs  manager.rs
crates/matching-engine/src/book/: mod.rs  order.rs  sort.rs
crates/matching-engine/src/matcher/: delta.rs  mod.rs  volume.rs
crates/matching-engine/src/simulation/: amm.rs  mod.rs  orders.rs
crates/matching-engine/src/strategy/: binary_search.rs  mod.rs  simplecheckpoint.rs
crates/matching-engine/tests/: bundle.rs  matching.rs  tob.rs
crates/matching-engine/tests/booklib/: mod.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: block_metrics.rs  consensus.rs  exporter.rs  lib.rs  stream_source.rs  validation.rs
crates/metrics/src/block_metrics_stream/: health.rs  meta.rs  mod.rs  publisher.rs  registry.rs
crates/metrics/src/order_pool/: finalization_pool.rs  limit_pool.rs  mod.rs  order_storage.rs  searcher_pool.rs
crates/order-pool/: Cargo.toml
crates/order-pool/src/: config.rs  finalization_pool.rs  lib.rs  order_indexer.rs  order_storage.rs  order_subscribers.rs  order_tracker.rs  telemetry.rs  validator.rs
crates/order-pool/src/common/: size.rs
crates/order-pool/src/limit/: composable.rs  mod.rs  parked.rs  pending.rs  standard.rs
crates/order-pool/src/searcher/: mod.rs  pending.rs
crates/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: consensus.rs  lib.rs  metrics.rs  orders.rs  quoting.rs
crates/rpc/rpc-types/: Cargo.toml
crates/rpc/rpc-types/src/: lib.rs  metrics.rs  quoting.rs  subscriptions.rs  utils.rs
crates/rpc/src/: consensus.rs  lib.rs  metrics.rs  orders.rs  quoting.rs
crates/telemetry/: Cargo.toml
crates/telemetry-recorder/: Cargo.toml
crates/telemetry-recorder/src/: lib.rs
crates/telemetry/src/: blocklog.rs  lib.rs
crates/telemetry/src/outputs/: log.rs  mod.rs  s3.rs
crates/types/: Cargo.toml
crates/types/constants/: Cargo.toml
crates/types/constants/src/: lib.rs
crates/types/primitives/: Cargo.toml  build.rs
crates/types/primitives/src/: lib.rs
crates/types/src/: block_sync.rs  lib.rs  pair_with_price.rs  reth_db_provider.rs  reth_db_wrapper.rs
crates/types/src/consensus/: evidence.rs  mod.rs  round_data.rs  slot_clock.rs
crates/types/src/matching/: composite.rs  debt.rs  match_estimate_response.rs  mod.rs  tokens.rs
crates/types/src/orders/: mod.rs  origin.rs
crates/types/src/submission/: angstrom.rs  mempool.rs  mev_boost.rs  mod.rs
crates/types/src/testnet/: mod.rs
crates/types/src/traits/: bundles.rs  chain_ext.rs  mod.rs  rewards_update.rs  tob.rs  user_orders.rs
crates/types/src/uni_structure/: donation.rs  liquidity_base.rs  mod.rs  pool_swap.rs
crates/types/tests/: angstrom.rs  bundle.rs  math.rs
crates/types/tests/solutionlib/: mod.rs
crates/uniswap-v4/: Cargo.toml  build.rs
crates/uniswap-v4/src/: lib.rs
crates/uniswap-v4/src/uniswap/: mod.rs  pool.rs  pool_data_loader.rs  pool_factory.rs  pool_manager.rs  tob.rs
crates/validation/: Cargo.toml
crates/validation/abi/: hh_console.json
crates/validation/src/: lib.rs  telemetry.rs  validator.rs
crates/validation/src/bundle/: mod.rs  validator.rs
crates/validation/src/common/: db.rs  key_split_threadpool.rs  mod.rs  token_pricing.rs
crates/validation/src/order/: mod.rs  order_validator.rs
testing-tools/: Cargo.toml
testing-tools/src/: lib.rs  utils.rs
testing-tools/src/agents/: mod.rs
testing-tools/src/contracts/: anvil.rs  contract_bytecodes.rs  mod.rs
testing-tools/src/contracts/deploy/: angstrom.rs  mod.rs  tokens.rs  uniswap_flags.rs
testing-tools/src/contracts/environment/: angstrom.rs  mod.rs  uniswap.rs
testing-tools/src/controllers/: mod.rs  state_lock.rs
testing-tools/src/controllers/enviroments/: devnet.rs  mod.rs  replay.rs  state_machine.rs  testnet.rs
testing-tools/src/controllers/strom/: harness.rs  mod.rs  (+2 more)
testing-tools/src/mocks/: canon_state.rs  consensus.rs  eth_events.rs  matching_engine.rs  mod.rs  network_events.rs  validator.rs
testing-tools/src/network/: consensus_future.rs  eth_peer.rs  mod.rs  strom_peer.rs
testing-tools/src/order_generator/: mod.rs  order_builder.rs  pool_order_generator.rs
testing-tools/src/order_pool/: mod.rs
testing-tools/src/providers/: anvil_provider.rs  anvil_submission.rs  block_provider.rs  initializer.rs  mod.rs  rpc_provider.rs  state_provider.rs  utils.rs
testing-tools/src/replay/: fake_network.rs  mod.rs  runner.rs
testing-tools/src/type_generator/: amm.rs  book.rs  mod.rs
testing-tools/src/types/: handles.rs  hooks.rs  initial_state.rs  mod.rs  traits.rs
testing-tools/src/validation/: mod.rs
(+2005 files in other folders)
