[workspace]
members = ["bin/*", "crates/*", "testing-tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "BUSL-1.1"
homepage = "https://github.com/SorellaLabs/angstrom"
repository = "https://github.com/SorellaLabs/angstrom"
exclude = [".github/"]

# Speed up tests.
[profile.dev.package]
angstrom-network.opt-level = 2
consensus.opt-level = 2
matching-engine.opt-level = 2
validation.opt-level = 2
testing-tools.opt-level = 2
angstrom-types.opt-level = 2
tokio.opt-level = 2

[profile.debug-fast]
inherits = "dev"
lto = false
opt-level = 0
codegen-units = 16

[profile.ci]
inherits = "dev"
lto = false
opt-level = 0
debug = 0
incremental = false
codegen-units = 256

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 3
incremental = false

[profile.maxperf-ss-debug]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
debug = 2
opt-level = 3

[workspace.dependencies]
alloy = { version = "1.6.3", features = [
  "rlp",
  "asm-keccak",
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
  "sol-types",
  "contract",
] }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-consensus = { version = "1.6.3", default-features = false }
alloy-contract = { version = "1.6.3" }
alloy-dyn-abi = "1.5.6"
alloy-eips = { version = "1.6.3", default-features = false }
alloy-genesis = { version = "1.6.3", default-features = false }
alloy-json-rpc = { version = "1.6.3", default-features = false }
alloy-network = { version = "1.6.3", default-features = false }
alloy-node-bindings = { version = "1.6.3", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash", "asm-keccak"] }
alloy-provider = { version = "1.6.3", default-features = false, features = ["reqwest"] }
alloy-pubsub = { version = "1.6.3", default-features = false }
alloy-rlp = "0.3.10"
alloy-rlp-derive = "0.3.10"
alloy-rpc-client = { version = "1.6.3", default-features = false }
alloy-rpc-types = { version = "1.6.3", default-features = false, features = ["eth"] }
alloy-rpc-types-admin = { version = "1.6.3", default-features = false }
alloy-rpc-types-anvil = { version = "1.6.3", default-features = false }
alloy-rpc-types-beacon = { version = "1.6.3", default-features = false }
alloy-rpc-types-engine = { version = "1.6.3", default-features = false }
alloy-rpc-types-eth = { version = "1.6.3", default-features = false }
alloy-rpc-types-txpool = { version = "1.6.3", default-features = false }
alloy-serde = { version = "1.6.3", default-features = false }
alloy-signer = { version = "1.6.3", default-features = false }
alloy-signer-local = { version = "1.6.3", default-features = false }
alloy-sol-macro = "1.5.6"
alloy-sol-types = "1.5.6"
alloy-transport = { version = "1.6.3" }
alloy-transport-http = { version = "1.6.3", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "1.6.3", default-features = false }
alloy-transport-ws = { version = "1.6.3", default-features = false }
alloy-trie = { version = "0.9.0", default-features = false }
angstrom = { path = "./bin/angstrom/" }
angstrom-amm-quoter = { path = "./crates/amm-quoter/" }
angstrom-eth = { path = "./crates/eth/" }
angstrom-metrics = { path = "./crates/metrics/" }
angstrom-network = { path = "./crates/angstrom-net/" }
angstrom-rpc = { path = "./crates/rpc/" }
angstrom-rpc-api = { path = "./crates/rpc/rpc-api/" }
angstrom-rpc-types = { path = "./crates/rpc/rpc-types/" }
angstrom-types = { path = "./crates/types/" }
angstrom-types-constants = { path = "./crates/types/constants/" }
angstrom-types-primitives = { path = "./crates/types/primitives/" }
angstrom-utils = { path = "./crates/utils/" }
anyhow = "1"
aquamarine = "0"
arbitrary = "1"
assert_matches = "1"
async-trait = "0"
auto_impl = "1"
base64 = "0.22.1"
base64-serde = "0.8.0"
bincode = "1"
bitflags = "2"
bitmaps = "3"
bytes = "1"
clap = "4"
consensus = { path = "./crates/consensus/" }
contract-bindings = { path = "./crates/contract-bindings/" }
convert_case = "0"
criterion = "0"
dashmap = { version = "6", features = ["serde"] }
divan = "0"
enr = { version = "0", default-features = false, features = ["k256"] }
eyre = "0"
futures = "0"
futures-util = "0"
hex-literal = "0"
homedir = "0"
hsm-signer = { git = "https://github.com/SorellaLabs/hsm-signer" }
hyper = "1.6.0"
itertools = "0"
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-server = "0.26.0"
jsonrpsee-types = "0.26.0"
k256 = { version = "0", default-features = false }
malachite = "0.4"
malachite-q = "0.4"
matching-engine = { path = "./crates/matching-engine/" }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.18.0"
metrics-process = "2.1"
num-bigfloat = "1"
num-traits = "0"
once_cell = "1"
order-pool = { path = "./crates/order-pool/" }
pade = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }
pade-macro = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0" }
parking_lot = "0"
pin-project = "1"
pprof = "0"
proc-macro2 = "1"
prometheus = "0"
proptest = "1"
proptest-derive = "0"
quote = "1"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1"
reth = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3", features = [
  "serde",
] }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-network = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", version = "1.11.3", tag = "v1.11.3" }
revm = { version = "34.0.0", features = [
  "std",
  "secp256k1",
  "optional_balance_check",
  "optional_block_gas_limit",
], default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-interpreter = { version = "32.0.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
ring = "=0.17.12"
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "rand", "recovery"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
serde_with = "3.13.0"
serial_test = "3"
strum = "0.27"
telemetry = { path = "./crates/telemetry/" }
telemetry-recorder = { path = "./crates/telemetry-recorder/" }
tempfile = "3"
testing-tools = { path = "./testing-tools/", default-features = false }
thiserror = "1"
tokio = { version = "^1.44.2", features = ["full", "tracing"], default-features = false }
tokio-stream = "0"
tokio-util = { version = "0", features = ["codec"] }
toml = "0"
tower = "0.5.2"
tracing = "0"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
uniswap-v4 = { path = "./crates/uniswap-v4/" }
uniswap_v3_math = { git = "https://github.com/SorellaLabs/v3-math", branch = "main" }
url = "2"
validation = { path = "./crates/validation/" }
