[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thetaswap-research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]>=0.4",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "eth_abi>=5.0",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["research"]
include = ["econometrics*", "backtest*"]

[tool.pytest.ini_options]
testpaths = ["research/tests"]
addopts = "--import-mode=importlib"
