[package]
name = "angstrom-amm-quoter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-types.workspace = true
eyre.workspace = true
futures.workspace = true
matching-engine.workspace = true
order-pool.workspace = true
rayon.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uniswap-v4.workspace = true
