[package]
name = "angstrom-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network support
"""

[lints.clippy]
large_enum_variant = "allow"
too_long_first_doc_paragraph = "allow"

[dependencies]
alloy.workspace = true
alloy-chains.workspace = true
angstrom-eth.workspace = true
angstrom-types.workspace = true
bincode.workspace = true
eyre.workspace = true
futures.workspace = true
homedir.workspace = true
itertools.workspace = true
linked_hash_set = "0"
once_cell.workspace = true
order-pool.workspace = true
parking_lot.workspace = true
reth.workspace = true
reth-eth-wire.workspace = true
reth-metrics.workspace = true
reth-net-banlist = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0" }
reth-network.workspace = true
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", version = "1.6.0", tag = "v1.6.0" }
reth-network-peers.workspace = true
reth-node-builder.workspace = true
reth-primitives.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
secp256k1.workspace = true
serde.workspace = true
telemetry-recorder.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
validation.workspace = true

[dev-dependencies]
angstrom-network.workspace = true
rand.workspace = true
reth-discv4 = { workspace = true, features = ["test-utils"] }
reth-metrics.workspace = true
reth-network = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
secp256k1.workspace = true
serial_test.workspace = true
tempfile.workspace = true
testing-tools.workspace = true
toml.workspace = true

[features]
default = ["serde"]
serde = ["secp256k1/serde"]
test-utils = ["reth-provider/test-utils"]
geth-tests = []
