[package]
name = "angstrom-eth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy.workspace = true
angstrom-types.workspace = true
anyhow.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
pade.workspace = true
reth-ethereum-primitives.workspace = true
reth-execution-types.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
telemetry-recorder.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
testing-tools.workspace = true
