[package]
name = "angstrom-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives.workspace = true
angstrom-rpc-types.workspace = true
angstrom-types.workspace = true
eyre.workspace = true
hyper = { workspace = true, features = ["server"] }
jsonrpsee-server.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-process.workspace = true
prometheus.workspace = true
reth-node-metrics.workspace = true
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-stream.workspace = true
tower.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
