[package]
name = "angstrom-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
angstrom-amm-quoter.workspace = true
angstrom-metrics.workspace = true
angstrom-network.workspace = true
angstrom-rpc-api.workspace = true
angstrom-rpc-types.workspace = true
angstrom-types.workspace = true
async-trait.workspace = true
consensus.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros", "ws-client"] }
order-pool.workspace = true
reth-tasks.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
validation.workspace = true

[dev-dependencies]
rand = "0"
tokio = { workspace = true, features = ["full", "tracing"] }

[features]
default = ["client"]
client = ["angstrom-rpc-api/client"]
