[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
angstrom-eth.workspace = true
angstrom-types.workspace = true
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.93.0"
base64.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
eyre.workspace = true
flate2 = "1.1.1"
futures.workspace = true
order-pool.workspace = true
reth-tasks.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry-recorder.workspace = true
tokio.workspace = true
tracing.workspace = true
validation.workspace = true
