[package]
name = "angstrom-types-primitives"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
angstrom-types-constants.workspace = true

base64.workspace = true
bincode.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
enr.workspace = true
eyre.workspace = true
hsm-signer.workspace = true
itertools.workspace = true
k256.workspace = true
malachite.workspace = true
pade.workspace = true
pade-macro.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
uniswap_v3_math.workspace = true

[build-dependencies]
convert_case.workspace = true
itertools.workspace = true

[dev-dependencies]
angstrom-types.workspace = true
rand.workspace = true
testing-tools.workspace = true
tokio.workspace = true

[features]
default = []
anvil = []
